fixed form z-index issue and added checkpoints

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,6 +52,11 @@ hr{
 	}
 }
 
+.input > div {
+	z-index:10;
+	
+}
+
 
 /*Top Nav*/
 
